--- a/ProgramacaoWEB/Aula10/src/app/menu-superior/menu-superior.component.html
+++ b/ProgramacaoWEB/Aula10/src/app/menu-superior/menu-superior.component.html
@@ -1,9 +1,19 @@
 <header class="d-flex justify-content-center py-3">
     <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        <li class="nav-item">
+            <a href="javascript:void(0);" routerLink="/calcular-media" routerLinkActive="active" class="nav-link">Calcular Média</a>
+        </li>
+        <li class="nav-item">
+            <a href="javascript:void(0);" routerLink="/calculadora" routerLinkActive="active" class="nav-link">Calculadora</a>
+        </li>
+        <li class="nav-item">
+            <a href="javascript:void(0);" routerLink="/cadastro-aluno" routerLinkActive="active" class="nav-link">Cadastro Aluno</a>
+        </li>
+        <li class="nav-item">
+            <a href="javascript:void(0);" routerLink="/apolice-seguro" routerLinkActive="active" class="nav-link">Apólice Seguro</a>
+        </li>
+        <li class="nav-item">
+            <a href="javascript:void(0);" routerLink="/tela-pai" routerLinkActive="active" class="nav-link">Tela Pai</a>
+        </li>
     </ul>
 </header>
