--- a/ProgramacaoWEB/Aula10/src/app/menu-superior/menu-superior.component.html
+++ b/ProgramacaoWEB/Aula10/src/app/menu-superior/menu-superior.component.html
@@ -15,5 +15,8 @@
         <li class="nav-item">
             <a href="javascript:void(0);" routerLink="/tela-pai" routerLinkActive="active" class="nav-link">Tela Pai</a>
         </li>
+        <li class="nav-item">
+            <a href="javascript:void(0);" routerLink="/template-driven" routerLinkActive="active" class="nav-link">Template-Driven</a>
+        </li>
     </ul>
 </header>
