--- a/ProgramacaoWEB/Aula10/src/app/cadastro-aluno/cadastro-aluno.component.html
+++ b/ProgramacaoWEB/Aula10/src/app/cadastro-aluno/cadastro-aluno.component.html
@@ -1,32 +1,46 @@
-<div class="row">
-    <div class="mb-3">
-        <label class="form-label">RA</label>
-        <input [(ngModel)]="ra" type="text" class="form-control">
+<form #form="ngForm" (submit)="cadastrarAluno(form)">
+    <div class="row">
+        <div class="mb-3">
+            <label class="form-label">RA</label>
+            <input [(ngModel)]="ra" type="text" class="form-control" name="ra" required>
+        </div>
+        <div *ngIf="form.submitted && form.controls['ra'].errors" class="text-danger">
+            <div *ngIf="form.controls['ra'].errors['required']">RA obrigatório</div>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Nome</label>
+            <input [(ngModel)]="nome" type="text" class="form-control" name="nome" required>
+        </div>
+        <div *ngIf="form.submitted && form.controls['nome'].errors" class="text-danger">
+            <div *ngIf="form.controls['nome'].errors['required']">Nome obrigatório</div>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">E-mail</label>
+            <input [(ngModel)]="email" type="text" class="form-control" name="email" required>
+        </div>
+        <div *ngIf="form.submitted && form.controls['email'].errors" class="text-danger">
+            <div *ngIf="form.controls['email'].errors['required']">E-mail obrigatório</div>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Celular</label>
+            <input [(ngModel)]="celular" type="text" class="form-control" name="celular" required>
+        </div>
+        <div *ngIf="form.submitted && form.controls['celular'].errors" class="text-danger">
+            <div *ngIf="form.controls['celular'].errors['required']">Celular obrigatório</div>
+        </div>
+        <div class="mb-3">
+            <button class="btn btn-primary" type="submit">Cadastrar</button>
+        </div>
+        <div *ngIf="alunos.length > 0">
+            <h2>Alunos Cadastrados</h2>
+            <ul>
+            <li *ngFor="let aluno of alunos">
+                <p>RA: {{ aluno.ra }}</p>
+                <p>Nome: {{ aluno.nome }}</p>
+                <p>E-mail: {{ aluno.email }}</p>
+                <p>Celular: {{ aluno.celular }}</p>
+            </li>
+            </ul>
+        </div>
     </div>
-    <div class="mb-3">
-        <label class="form-label">Nome</label>
-        <input [(ngModel)]="nome" type="text" class="form-control">
-    </div>
-    <div class="mb-3">
-        <label class="form-label">E-mail</label>
-        <input [(ngModel)]="email" type="text" class="form-control">
-    </div>
-    <div class="mb-3">
-        <label class="form-label">Celular</label>
-        <input [(ngModel)]="celular" type="text" class="form-control">
-    </div>
-    <div class="mb-3">
-        <button class="btn btn-primary" (click)="cadastrarAluno()">Cadastrar</button>
-    </div>
-    <div *ngIf="alunos.length > 0">
-        <h2>Alunos Cadastrados</h2>
-        <ul>
-          <li *ngFor="let aluno of alunos">
-            <p>RA: {{ aluno.ra }}</p>
-            <p>Nome: {{ aluno.nome }}</p>
-            <p>E-mail: {{ aluno.email }}</p>
-            <p>Celular: {{ aluno.celular }}</p>
-          </li>
-        </ul>
-    </div>
-</div>
+</form>
