--- a/ProgramacaoWEB/Aula10/src/app/menu-superior/menu-superior.component.html
+++ b/ProgramacaoWEB/Aula10/src/app/menu-superior/menu-superior.component.html
@@ -18,5 +18,8 @@
         <li class="nav-item">
             <a href="javascript:void(0);" routerLink="/template-driven" routerLinkActive="active" class="nav-link">Template-Driven</a>
         </li>
+        <li class="nav-item">
+            <a href="javascript:void(0);" routerLink="/gerenciador-tarefas" routerLinkActive="active" class="nav-link">Gerenciador Tarefas</a>
+        </li>
     </ul>
 </header>
